--- a/notebooks/08_shap.ipynb
+++ b/notebooks/08_shap.ipynb
@@ -368,10 +368,10 @@
     "    return model.predict(X)\n",
     "\n",
     "# Tworzenie wyjaśniacza KernelExplainer\n",
-    "explainer = shap.KernelExplainer(predict, X_train)  # X_train[:100] to próbki referencyjne\n",
+    "explainer = shap.KernelExplainer(predict, X_train)\n",
     "\n",
     "# Obliczanie wartości SHAP dla przykładowych danych\n",
-    "shap_values = explainer.shap_values(X_test[0:1])  # X_test to dane testowe, wybieramy przykład 299\n",
+    "shap_values = explainer.shap_values(X_test[0:1])  # X_test to dane testowe, wybieramy przykład 0\n",
     "\n",
     "# Tworzenie obiektu Explanation z etykietami cech\n",
     "explanation = shap.Explanation(values=shap_values[0][0], \n",
@@ -379,7 +379,7 @@
     "                               data=X_test[0],\n",
     "                               feature_names=df.columns)\n",
     "\n",
-    "# Wyświetlanie wykresu wodospadu\n",
+    "# Wyświetlanie wykresu wodospadowego\n",
     "shap.waterfall_plot(explanation)"
    ]
   },
