--- a/thesis/bibliography.tex
+++ b/thesis/bibliography.tex
@@ -17,7 +17,7 @@
     \bibitem{numpy_paper} \url{https://doi.org/10.1038/s41586-020-2649-2}
     \bibitem{seaborn_paper} \url{https://joss.theoj.org/papers/10.21105/joss.03021}
     \bibitem{tensorflow_paper} \url{https://zenodo.org/records/10798587}
-    \bibitem{wyklad} Materiały wykładowe przedmiotu.
+    \bibitem{wyklad} A.Wosiak, R.Woźniak, Materiały wykładowe przedmiotu.
     \bibitem{svm_wiki} \url{https://pl.wikipedia.org/wiki/Maszyna_wektor%C3%B3w_no%C5%9Bnych}
     \bibitem{lime} \url{https://christophm.github.io/interpretable-ml-book/lime.html}
     \bibitem{shap} \url{https://christophm.github.io/interpretable-ml-book/shap.html}
