--- a/notebooks/01_classification_25.ipynb
+++ b/notebooks/01_classification_25.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "(400, 24)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "(7,)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNN Precision:\t  0.85\n",
+      "KNN Precision:\t  0.9\n",
       "KNN Accuracy:\t  0.75\n"
      ]
     }
@@ -128,7 +128,7 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn import metrics\n",
     "\n",
-    "knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "knn = KNeighborsClassifier(n_neighbors=3)\n",
     "knn.fit(X_train, y_train)\n",
     "\n",
     "y_pred = knn.predict(X_test)\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -147,18 +147,30 @@
      "text": [
       "                               precision    recall  f1-score   support\n",
       "\n",
-      "            Basilar-type aura       1.00      0.12      0.22         8\n",
-      " Familial hemiplegic migraine       0.57      0.80      0.67         5\n",
-      "        Migraine without aura       0.64      0.64      0.64        11\n",
-      "                        Other       1.00      0.50      0.67         4\n",
+      "            Basilar-type aura       1.00      0.25      0.40         8\n",
+      " Familial hemiplegic migraine       0.43      0.60      0.50         5\n",
+      "        Migraine without aura       0.67      0.55      0.60        11\n",
+      "                        Other       0.00      0.00      0.00         4\n",
       " Sporadic hemiplegic migraine       0.00      0.00      0.00         5\n",
-      "   Typical aura with migraine       0.77      0.94      0.85        62\n",
-      "Typical aura without migraine       1.00      0.60      0.75         5\n",
+      "   Typical aura with migraine       0.77      0.95      0.85        62\n",
+      "Typical aura without migraine       1.00      1.00      1.00         5\n",
       "\n",
       "                     accuracy                           0.75       100\n",
-      "                    macro avg       0.71      0.51      0.54       100\n",
-      "                 weighted avg       0.75      0.75      0.71       100\n",
+      "                    macro avg       0.55      0.48      0.48       100\n",
+      "                 weighted avg       0.70      0.75      0.70       100\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kp/anaconda3/envs/visualization/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/kp/anaconda3/envs/visualization/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/kp/anaconda3/envs/visualization/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
@@ -172,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "set()"
+       "{'Other', 'Sporadic hemiplegic migraine'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,16 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "współczynnik zarysu:\t\t 0.09710216429160358\n",
-      "indeks Calińskiego-Harabasza:\t 16.920883412095897\n",
-      "indeks Daviesa-Bouldina:\t 2.12940438225348\n"
+      "współczynnik zarysu:\t\t 0.09979366026040562\n",
+      "indeks Calińskiego-Harabasza:\t 17.54815507289581\n",
+      "indeks Daviesa-Bouldina:\t 2.2466269255092906\n"
      ]
     }
    ],
@@ -224,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
