--- a/thesis/07_conclusions.tex
+++ b/thesis/07_conclusions.tex
@@ -20,6 +20,7 @@ Dokładność na zbliżonym poziomie co perceptron z tym że pozwala pokazać po
 \textbf{Techniki LIME i SHAP}\\
 Mogą być cenną wskazówką które konkretnie cechy miały wpływ na wynik klasyfikacji. Powinniśmy mieć jednak na uwadze jak działają, jak interpretować wykresy i przede wszystkim mieć do dyspozycji osobę z wiedzą domenową.
 
+\newpage
 \subsection{Wnioski ogólne}
 Algorytmy uczenia maszynowego - zarówno sieci neuronowe jak i metody klasyfikacji mogą być przydatnym narzędziem w diagnostyce bólów głowy.\\
 
