--- a/notebooks/01_classification.ipynb
+++ b/notebooks/01_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "(400, 24)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "(7,)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,33 +112,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNN Precision:\t  0.85\n",
-      "KNN Accuracy:\t  0.7875\n"
+      "KNN Precision:\t  0.903125\n",
+      "KNN Accuracy:\t  0.7625\n",
+      "Cross_val Accuracies:\t [0.75    0.84375 0.78125 0.8125  0.875   0.75    0.78125 0.8125  0.78125\n",
+      " 0.84375]\n",
+      "Avg Cross_val:\t 0.803125\n"
      ]
     }
    ],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn import metrics\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "\n",
-    "knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "knn = KNeighborsClassifier(n_neighbors=3)\n",
     "knn.fit(X_train, y_train)\n",
+    "score = cross_val_score(knn, X_train, y_train, cv=10, scoring='accuracy')\n",
     "\n",
     "y_pred = knn.predict(X_test)\n",
     "print(\"KNN Precision:\\t \", format(knn.score(X_train, y_train)))\n",
-    "print(\"KNN Accuracy:\\t \", metrics.accuracy_score(y_test, y_pred))"
+    "print(\"KNN Accuracy:\\t \", metrics.accuracy_score(y_test, y_pred))\n",
+    "print(\"Cross_val Accuracies:\\t\", score)\n",
+    "print(\"Avg Cross_val:\\t\",  score.mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -147,30 +154,18 @@
      "text": [
       "                               precision    recall  f1-score   support\n",
       "\n",
-      "            Basilar-type aura       1.00      0.29      0.44         7\n",
-      " Familial hemiplegic migraine       0.50      0.80      0.62         5\n",
-      "        Migraine without aura       0.62      0.62      0.62         8\n",
-      "                        Other       1.00      0.67      0.80         3\n",
+      "            Basilar-type aura       0.67      0.29      0.40         7\n",
+      " Familial hemiplegic migraine       0.43      0.60      0.50         5\n",
+      "        Migraine without aura       0.71      0.62      0.67         8\n",
+      "                        Other       1.00      0.33      0.50         3\n",
       " Sporadic hemiplegic migraine       0.00      0.00      0.00         4\n",
-      "   Typical aura with migraine       0.82      0.94      0.88        49\n",
-      "Typical aura without migraine       1.00      1.00      1.00         4\n",
+      "   Typical aura with migraine       0.81      0.96      0.88        49\n",
+      "Typical aura without migraine       1.00      0.75      0.86         4\n",
       "\n",
-      "                     accuracy                           0.79        80\n",
-      "                    macro avg       0.71      0.62      0.62        80\n",
-      "                 weighted avg       0.77      0.79      0.76        80\n",
+      "                     accuracy                           0.76        80\n",
+      "                    macro avg       0.66      0.51      0.54        80\n",
+      "                 weighted avg       0.74      0.76      0.73        80\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/kp/anaconda3/envs/visualization/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/Users/kp/anaconda3/envs/visualization/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/Users/kp/anaconda3/envs/visualization/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
@@ -184,16 +179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Sporadic hemiplegic migraine'}"
+       "set()"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,16 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "współczynnik zarysu:\t\t 0.10306167814552365\n",
-      "indeks Calińskiego-Harabasza:\t 17.50395819700793\n",
-      "indeks Daviesa-Bouldina:\t 2.08342292869469\n"
+      "współczynnik zarysu:\t\t 0.0960433853570669\n",
+      "indeks Calińskiego-Harabasza:\t 17.10195409324369\n",
+      "indeks Daviesa-Bouldina:\t 2.4088455062927845\n"
      ]
     }
    ],
