Some fixes but still for second review.

--- a/thesis/07_conclusions.tex
+++ b/thesis/07_conclusions.tex
@@ -3,7 +3,7 @@
 W pracy przeanalizowano podstawowe zastosowanie kilku popularnych algorytmów uczenia maszynowego. Oto podsumowanie najważniejszych wniosków z każdego z nich:\\
 
 \textbf{kNN}\\
-Przy podziale zbioru 75-25 algorytm osiągnął dokładność 75\%, precyzję 75\% oraz recall 71\%. Algorytm wyraźnie gorzej radził sobie z rozpoznawaniem mniej licznych klas. Potencjalnie wyniki mogłyby być duzo lepsze dla bardziej licznego, zbalansowanego zbioru.\\
+Przy podziale zbioru 80\% dane treningowe, 20\% dane testowe i walidacja krzyżowa z podziałem zbioru na 10 algorytm osiągnął dokładność 76\%, precyzję 90\% oraz recall 76\%. Algorytm wyraźnie gorzej radził sobie z rozpoznawaniem mniej licznych klas. Potencjalnie wyniki mogłyby być dużo lepsze dla bardziej licznego, zbalansowanego zbioru.\\
 
 \textbf{Naiwnym Klasyfikator Bayesa}\\
 Udało się osiągnąć dokładność 75\%, precyzję 69\% oraz recall 75\%. Pomimo nieco gorszych wyników niż dla kNN zastosowanie Naiwnego Klasyfikatora Bayesa ma tę przewagę że pozwala pokazać podobieństwo do wszystkich możliwych klas, co może być użyteczne w praktycznych zastosowaniach medycznych.\\
