Small grammar changes.

--- a/thesis/06_experiments.tex
+++ b/thesis/06_experiments.tex
@@ -2,7 +2,7 @@
 \subsection{Klasyfikacja kNN - dobór liczby sąsiadów}
 Dobór liczby sąsiadów dla algorytmu kNN jest bardzo istotny. Zbyt mała liczba sąsiadów może powodować zbytnie dopasowanie do danych, zbyt duża - negatywnie wpłynie na wartości dokładności i precyzji.\\
 
-W celu optymalnego doboru k posłużę się średnią wartością dokładności z wykorzystaniem kroswalidacji (o podziale zbioru na 10). Następnie rysuję wykres średniej dokładności w zależności od liczby sąsiadów:
+W celu optymalnego doboru k posłużyły średnie wartości dokładności z wykorzystaniem kroswalidacji (o podziale zbioru na 10). Następnie rysuję wykres średniej dokładności w zależności od liczby sąsiadów:
 
 \begin{figure}[H]
     \centering
